# zyra

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.devcontainer/scripts/: codex-setup.sh
.github/workflows/: README.md  relay-to-org.yml  sync-github-issues.yml  wiki-sync.yml
docker/zyra/: Dockerfile
docker/zyra-scheduler/: Dockerfile
docs/plans/: issue-11-ftp-sync-overwrite.md
docs/source/: discovery.rst  index.rst
docs/source/_static/: narrative_pack.schema.json
docs/source/api/: zyra.processing.rst
docs/source/guides/: narrate_swarm_quickstart.rst  programmatic_api.md
docs/source/wiki/: Home.md  Install-Extras.md  Model-Context-Protocol-(MCP)-Inefficiencies-and-the-Shift-to-Code-Execution.md  Stage-Agents-and-Planner-Overview.md  Task-Decomposition-and-Planning-Summary.md  Using-Zyra-in-Python-Notebooks.md  Video-Transcoding.md  Wizard-Interactive-Assistant.md  Workflow-Stages.md  Zyra-Credential-Helper-Guide.md  Zyra-Development.md  _Sidebar.md
examples/: api_and_programmatic_interface.ipynb  climate.json  narration_swarm.ipynb
ingress/: deployment.yaml
llm/: README.md
llm/actions/cli_manifest/: README.md  openapi.yaml
llm/open-webui/: README.md
llm/open-webui/tools/: zyra_cli_manifest.py
llm/prompts/: zyra_cli_manifest_chatgpt.md  zyra_helper_bot_system.md  zyra_tools_system.md
rubrics/: stress_review.yaml
samples/: drought_notebook_walkthrough.ipynb
samples/swarm/: drought_animation.yaml  mock_basic.yaml  simulate_decide.yaml
samples/workflows/: minimal.yml
src/zyra/: cli.py  manifest.py  manifest_utils.py  pipeline_runner.py  plugins.py  stage_utils.py
src/zyra/api/: server.py
src/zyra/api/mcp_tools/: README.md  audio.py  generic.py
src/zyra/api/models/: cli_request.py  domain_api.py
src/zyra/api/routers/: cli.py  manifest.py  mcp.py
src/zyra/api/schemas/: domain_args.py
src/zyra/api/services/: manifest.py
src/zyra/api/workers/: executor.py
src/zyra/assets/llm/presets/narrate/: accessibility_default.yaml  kids_policy_basic.yaml  kids_policy_dual.yaml  kids_story.yaml  multi_audience_report.yaml  policy_brief.yaml  scientific_lite.yaml  scientific_rigorous.yaml  stress_benchmark.yaml
src/zyra/assets/llm/prompts/: zyra_tools_system.md
src/zyra/assets/llm/prompts/narrate/: audience_adapter.md  context.md  critic.md  editor.md  summary.md
src/zyra/assets/llm/rubrics/: critic.yaml
src/zyra/connectors/: clients.py  credentials.py
src/zyra/connectors/backends/: ftp.py  http.py  vimeo.py
src/zyra/connectors/discovery/: README.md  __init__.py  api_search.py
src/zyra/connectors/egress/: README.md  __init__.py
src/zyra/connectors/ingest/: README.md  __init__.py
src/zyra/connectors/openapi/: validate.py
src/zyra/core/: __init__.py  capabilities_loader.py
src/zyra/narrate/: README.md  __init__.py  swarm.py
src/zyra/narrate/schemas/: __init__.py  pack.py
src/zyra/notebook/: README.md  __init__.py  registry.py
src/zyra/processing/: README.md  __init__.py  pad_missing.py  video_transcode.py
src/zyra/swarm/: __init__.py  agents.py  classifier.py  cli.py  core.py  guardrails.py  memory.py  planner.py  proposals.py  proposals_schema.py  spec.py  value_engine.py
src/zyra/transform/: README.md  __init__.py
src/zyra/verify/: __init__.py
src/zyra/wizard/: __init__.py  llm_client.py  manifest.py  zyra_capabilities.json
src/zyra/wizard/zyra_capabilities/: acquire.json  decide.json  decimate.json  disseminate.json  export.json  import.json  narrate.json  optimize.json  process.json  render.json  run.json  search.json  simulate.json  transform.json  verify.json  visualize.json  zyra_capabilities_index.json
src/zyra/workflow/: api.py
tests/: test_cli_help_plugins.py  test_manifest_api.py  test_manifest_utils.py  test_plugins.py  test_workflow_api.py
tests/api/: test_domain_apis.py  test_domain_narrate_swarm.py  test_manifest_required_positional.py  test_mcp_api_fetch_security.py  test_mcp_download_audio_errors.py  test_mcp_download_audio_tool.py
tests/cli/: test_egress_credentials.py  test_ingest_credentials.py  test_manifest_smoke.py  test_narrate_swarm_cli.py  test_narrate_swarm_critic_editor.py  test_narrate_swarm_exit_codes.py  test_narrate_swarm_input.py  test_narrate_swarm_new_presets.py  test_narrate_swarm_structured.py
tests/connectors/: test_acquire_api_auth.py  test_credentials_helper.py  test_ftp_backend.py  test_search_api.py
tests/core/: test_capabilities_loader.py
tests/narrate/: test_dag_and_status.py  test_narrative_pack_hypothesis.py  test_narrative_pack_schema.py  test_pack_provenance.py  test_retries.py  test_runtime_validation.py  test_swarm_frames.py  test_swarm_hypothesis.py  test_swarm_rounds.py
tests/notebook/: test_overlay_planner.py  test_provenance_and_overlay.py  test_registry.py  test_session_export.py  test_swarm_dry_run.py
tests/pipeline/: test_run_cli_stdout_capture.py
tests/processing/: test_pad_missing.py  test_video_transcode.py
tests/snapshots/: openapi_paths.json  openapi_sha256.txt
tests/swarm/: test_classifier.py  test_guardrails_adapter.py  test_guardrails_extra.py  test_planner.py  test_proposal_stage_agent.py  test_proposals.py  test_provenance_store.py  test_swarm_cli.py  test_swarm_planner_llm.py  test_value_engine.py  test_verify_capture.py
tests/verify/: test_evaluate.py
tests/wizard/: test_llm_client_errors.py  test_manifest_writer.py  test_select_provider.py
